c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/conflicting_array_declarations.c
int arr[6];

int main(void) {
    return arr[0];
}

// it's illegal to redeclare arr as a different type
int arr[5];